@@ -1,3 +1,14 @@
+2010-07-13  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r63162.
+        http://trac.webkit.org/changeset/63162
+        https://bugs.webkit.org/show_bug.cgi?id=42224
+
+        This is no longer needed (Requested by olliej_ on #webkit).
+
+        * bindings/v8/ScriptSourceCode.h:
+        (WebCore::ScriptSourceCode::ScriptSourceCode):
+
 2010-07-13  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
